adjust vote section layout

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
 
         <!---------------------------page14--------------------------->
 
-        <div id="p14" class="main-section display-none  question-page">
+        <div id="p14" class="main-section display-none question-page">
             <div class="text-section">
                 <h2 class="text-colored">Section 2: DISPONIBILITÉ ET CONTINUITÉ</h2>
             </div>
@@ -609,8 +609,8 @@
             <div class="text-section">
                 <p class="text-question text-white"><span class="text-colored">Question 2.1</span> Quelle serait la durée maximale acceptable d’une panne affectant vos systèmes ou logiciels les plus importants ?</p>
             </div>
-            <div class="text-section vote-section">
-                <div class="col-sm-15 vote-item">
+            <div class="text-section vote-section translate">
+                <div class="col-xs-2 vote-item">
                     <svg>
                         <use xlink:href="#rate" width="120"></use>
                     </svg>
@@ -666,7 +666,7 @@
             <div class="text-section">
                 <p class="text-question text-white"><span class="text-colored">Question 2.2</span> Advenant la perte de vos documents les plus importants, la copie de sauvegarde la plus récente ne devrait pas être plus vieille que:</p>
             </div>
-            <div class="text-section vote-section">
+            <div class="text-section vote-section  translate">
                 <div class="col-sm-15 vote-item">
                     <svg>
                         <use xlink:href="#rate" width="120"></use>
@@ -718,7 +718,7 @@
                 <p class="text-question text-white"><span class="text-colored">Question 2.3</span> Advenant la perte de vos documents les plus importants, la copie de sauvegarde la plus récente ne devrait pas être plus vieille que:</p>
             </div>
             <div class="text-section vote-section">
-                <div class="col-sm-15 vote-item">
+                <div class="col-xs-2 vote-item">
                     <svg>
                         <use xlink:href="#rate" width="120"></use>
                     </svg>
