new hamburger menu, more media queries for iphone

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <div class="progress-bar-container" id="js-progress-bar-container">
         <div class="progress-question">
-            <p>Question 1/63</p>
+            <p>Question 1/13</p>
         </div>
         <div class="progress-nav">
             <div class="progress-nav-previous">
@@ -72,7 +72,11 @@
             </div>
         </div>
     </div>
-            <a href="#" class="section-nav">Nav</a>
+            <a href="#" class="section-nav">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
         <div class="menu-small">
             <div class="progress-meter less-768">
                 <div class="progress-meter-top-section">
@@ -178,6 +182,7 @@
                 </div>
             </div>
         </div>
+        <div class="menu-back"></div>
     <div class="main-section-wrapper">
 
         <!---------------------------page00--------------------------->
